--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==5.1.7
+huey==2.5.3
 idna==3.10
 requests==2.32.3
 sqlparse==0.5.3
