--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,18 @@ asarPy==1.0.1
 asgiref==3.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
+cron-validator==1.0.8
 Django==5.1.7
 gunicorn==23.0.0
 huey==2.5.3
 idna==3.10
 packaging==24.2
+psycopg==3.2.7
+psycopg-binary==3.2.7
+python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.32.3
+six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.13.2
 urllib3==2.3.0
