Feat. huey now uses redis

--- a/.env.tls.example
+++ b/.env.tls.example
@@ -20,3 +20,7 @@ RCLONE_PORT=5572
 # Traefik
 TRAFIK_DOMAIN=traefik.example.com
 TRAEFIK_LE_EMAIL=
+
+# Huey
+HUEY_REDIS_HOST=redis
+HUEY_REDIS_PORT=6379
