--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,11 +31,19 @@ services:
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_HOST: ${DATABASE_HOST}
       DATABASE_PORT: ${DATABASE_PORT}
+
+      HUEY_REDIS_HOST: ${HUEY_REDIS_HOST}
+      HUEY_REDIS_PORT: ${HUEY_REDIS_PORT}
     ports:
       - "8000:8000"
     env_file:
       - .env
 
+  # Only used for Huey
+  redis: 
+    image: redis:7-alpine
+    container_name: syncr-redis
+    restart: unless-stopped
 
   huey:
     container_name: syncr-huey
@@ -51,7 +59,11 @@ services:
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_HOST: ${DATABASE_HOST}
       DATABASE_PORT: ${DATABASE_PORT}
+
+      HUEY_REDIS_HOST: ${HUEY_REDIS_HOST}
+      HUEY_REDIS_PORT: ${HUEY_REDIS_PORT}
     depends_on:
+      - redis
       - web
 
   rclone:
