--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ psycopg==3.2.7
 psycopg-binary==3.2.7
 python-dateutil==2.9.0.post0
 pytz==2025.2
+redis==6.0.0
 requests==2.32.3
 six==1.17.0
 sqlparse==0.5.3
