--- a/.env.tls.example
+++ b/.env.tls.example
@@ -18,7 +18,7 @@ RCLONE_ADDR=0.0.0.0
 RCLONE_PORT=5572
 
 # Traefik
-TRAFIK_DOMAIN=traefik.example.com
+TRAEFIK_DOMAIN=traefik.example.com
 TRAEFIK_LE_EMAIL=
 
 # Huey
