Fix huey -> redis connection and traefik domain

--- a/.env.tls.example
+++ b/.env.tls.example
@@ -22,5 +22,5 @@ TRAEFIK_DOMAIN=traefik.example.com
 TRAEFIK_LE_EMAIL=
 
 # Huey
-HUEY_REDIS_HOST=redis
+HUEY_REDIS_HOST=syncr-redis
 HUEY_REDIS_PORT=6379
