Feat. env to disable registration

--- a/.env.tls.example
+++ b/.env.tls.example
@@ -11,6 +11,7 @@ DJANGO_ALLOWED_HOSTS=
 DATABASE_HOST=postgres
 DJANGO_CSRF_TRUSTED_ORIGINS=https://example.com
 DJANGO_TRAEFIK_DOMAIN=example.com
+DJANGO_REGISTRATION_ENABLED=false
 
 # Rclone
 TIMEZONE=
