--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DJANGO_SECRET_KEY=
 DJANGO_DEBUG=0
 DJANGO_ALLOWED_HOSTS=
 DATABASE_HOST=postgres
+DJANGO_REGISTRATION_ENABLED=false
 
 # Rclone
 TIMEZONE=
