Fix registration disable

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ DJANGO_SECRET_KEY=
 DJANGO_DEBUG=0
 DJANGO_ALLOWED_HOSTS=
 DATABASE_HOST=postgres
-DJANGO_REGISTRATION_ENABLED=false
+DJANGO_REGISTRATION_ENABLED=False # Only accepts True if you want to enable
 
 # Rclone
 TIMEZONE=
