--- a/.env.tls.example
+++ b/.env.tls.example
@@ -11,7 +11,7 @@ DJANGO_ALLOWED_HOSTS=
 DATABASE_HOST=postgres
 DJANGO_CSRF_TRUSTED_ORIGINS=https://example.com
 DJANGO_TRAEFIK_DOMAIN=example.com
-DJANGO_REGISTRATION_ENABLED=false
+DJANGO_REGISTRATION_ENABLED=False # Only accepts True if you want to enable
 
 # Rclone
 TIMEZONE=
